<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardGroupWithButton" >

    <TextView
        android:id="@+id/section_all_time"
        android:text="@string/section_all_time"
        style="@style/SectionTitle" />

    <!-- Days -->
    <TextView
        android:id="@+id/all_time_days"
        android:layout_below="@id/section_all_time"
        android:layout_marginRight="@dimen/card_padding"
        android:layout_alignParentRight="true"
        style="@style/CurrentValue" />

    <TextView
        android:id="@+id/all_time_days_title"
        android:text="@string/days"
        android:layout_toLeftOf="@id/all_time_days"
        android:layout_below="@id/section_all_time"
        style="@style/MetricTitle" />

    <!-- Sets -->
    <TextView
        android:id="@+id/all_time_sets"
        android:layout_below="@id/all_time_days"
        android:layout_marginRight="@dimen/card_padding"
        android:layout_alignParentRight="true"
        style="@style/CurrentValue" />

    <TextView
        android:id="@+id/all_time_sets_title"
        android:text="@string/trainings"
        android:layout_toLeftOf="@id/all_time_sets"
        android:layout_below="@id/all_time_days"
        style="@style/MetricTitle" />

    <!-- Overall pull-ups -->
    <TextView
        android:id="@+id/all_time_total"
        android:layout_below="@id/all_time_sets"
        android:layout_marginRight="@dimen/card_padding"
        android:layout_alignParentRight="true"
        style="@style/CurrentValue" />

    <TextView
        android:id="@+id/all_time_total_title"
        android:text="@string/total"
        android:layout_toLeftOf="@id/all_time_total"
        android:layout_below="@id/all_time_sets"
        style="@style/MetricTitle" />

    <!-- Record -->
    <TextView
        android:id="@+id/all_time_record"
        android:layout_below="@id/all_time_total"
        android:layout_marginRight="@dimen/card_padding"
        android:layout_alignParentRight="true"
        style="@style/CurrentValue" />

    <TextView
        android:id="@+id/all_time_record_title"
        android:text="@string/record"
        android:layout_toLeftOf="@id/all_time_record"
        android:layout_below="@id/all_time_total"
        android:layout_marginBottom="@dimen/card_padding"
        style="@style/MetricTitle" />

    <!-- Reset statistics -->
    <View
        android:id="@+id/reset_stat_divider"
        android:layout_below="@id/all_time_record_title"
        style="@style/Divider" />

    <Button
        android:id="@+id/reset_stat"
        android:layout_below="@id/reset_stat_divider"
        android:text="@string/clear_stats"
        style="@style/CardButton" />

</RelativeLayout>