<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       android:stretchColumns="0">

    <TableRow
        android:layout_marginBottom="0dp">

        <TextView
            android:id="@+id/section_title"
            android:layout_marginBottom="0dp"
            style="@style/SectionTitle"/>
    </TableRow>

    <TableRow
        android:layout_marginBottom="2dp">

        <TextView
            android:layout_column="1"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="normal"
            android:textAllCaps="true"
            android:text="@string/current"
            android:visibility="visible"
            style="@style/CurrentValue"/>

        <TextView
            android:layout_column="2"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="normal"
            android:textAllCaps="true"
            android:text="@string/previous"
            android:visibility="visible"
            style="@style/CurrentValue"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/total_title"
            android:text="@string/total"
            style="@style/MetricTitle"/>

        <TextView
            android:id="@+id/total"
            style="@style/CurrentValue"/>

        <TextView
            android:id="@+id/total_delta"
            style="@style/DeltaValue"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/sets_title"
            android:text="@string/trainings"
            style="@style/MetricTitle"/>

        <TextView
            android:id="@+id/sets"
            style="@style/CurrentValue"/>

        <TextView
            android:id="@+id/sets_delta"
            style="@style/DeltaValue"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/record_title"
            android:text="@string/record"
            style="@style/MetricTitle"/>

        <TextView
            android:id="@+id/record"
            style="@style/CurrentValue"/>

        <TextView
            android:id="@+id/record_delta"
            style="@style/DeltaValue"/>
    </TableRow>

</merge>