<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardGroupWithButton">

    <TextView
        android:id="@+id/section_counter"
        android:text="@string/counter"
        android:layout_marginBottom="10dp"
        style="@style/SectionTitle" />

    <!-- Count -->
    <LinearLayout
        android:id="@+id/count_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_counter">

        <Button
            android:id="@+id/prev_value"
            style="@style/AdjustPrevValue" />

        <TextView
            android:id="@+id/pull_ups_count"
            android:text="@string/default_value"
            style="@style/CounterText" />

        <Button
            android:id="@+id/next_value"
            style="@style/AdjustNextValue" />
    </LinearLayout>

    <TextView
        android:id="@+id/pull_ups_count_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/count_group"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="@dimen/card_padding"
        android:layout_marginLeft="@dimen/card_padding"
        android:layout_marginRight="@dimen/card_padding"
        android:text="@string/pull_ups"
        style="@style/CounterUnitsText" />

    <View
        android:id="@+id/manage_counting_divider"
        android:layout_below="@id/pull_ups_count_title"
        style="@style/Divider" />

    <!-- Start/Stop -->
    <Button
        android:id="@+id/manage_counting"
        android:layout_below="@id/manage_counting_divider"
        android:text="@string/start_counting"
        style="@style/CardButtonWithAccent" />

</RelativeLayout>