<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardGroup" >

    <TextView
        android:id="@+id/section_week"
        android:text="@string/section_week"
        style="@style/SectionTitle" />

    <!-- Sets -->
    <TextView
        android:id="@+id/week_sets_delta"
        android:layout_below="@id/section_week"
        style="@style/DeltaValue" />

    <TextView
        android:id="@+id/week_sets"
        android:layout_toLeftOf="@id/week_sets_delta"
        android:layout_below="@id/section_week"
        style="@style/CurrentValue" />

    <TextView
        android:id="@+id/week_sets_title"
        android:text="@string/trainings"
        android:layout_toLeftOf="@id/week_sets"
        android:layout_below="@id/section_week"
        style="@style/MetricTitle" />

    <!-- Overall pull-ups -->
    <TextView
        android:id="@+id/week_total_delta"
        android:layout_below="@id/week_sets_delta"
        style="@style/DeltaValue" />

    <TextView
        android:id="@+id/week_total"
        android:layout_toLeftOf="@id/week_total_delta"
        android:layout_below="@id/week_sets_delta"
        style="@style/CurrentValue" />

    <TextView
        android:id="@+id/week_total_title"
        android:text="@string/total"
        android:layout_toLeftOf="@id/week_total"
        android:layout_below="@id/week_sets_delta"
        style="@style/MetricTitle" />

    <!-- Record -->
    <TextView
        android:id="@+id/week_record_delta"
        android:layout_below="@id/week_total_delta"
        style="@style/DeltaValue" />

    <TextView
        android:id="@+id/week_record"
        android:layout_toLeftOf="@id/week_record_delta"
        android:layout_below="@id/week_total_delta"
        style="@style/CurrentValue" />

    <TextView
        android:id="@+id/week_record_title"
        android:text="@string/record"
        android:layout_toLeftOf="@id/week_record"
        android:layout_below="@id/week_total_delta"
        style="@style/MetricTitle" />

</RelativeLayout>