<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/section_all_time"
            android:text="@string/section_all_time"
            style="@style/SectionTitle"/>

        <!-- Days -->
        <TextView
            android:id="@+id/all_time_days"
            android:layout_below="@id/section_all_time"
            android:layout_marginRight="@dimen/card_padding"
            android:layout_alignParentRight="true"
            style="@style/CurrentValue"/>

        <TextView
            android:id="@+id/all_time_days_title"
            android:text="@string/days"
            android:layout_toLeftOf="@id/all_time_days"
            android:layout_below="@id/section_all_time"
            style="@style/MetricTitle"/>

        <!-- Sets -->
        <TextView
            android:id="@+id/all_time_sets"
            android:layout_below="@id/all_time_days"
            android:layout_marginRight="@dimen/card_padding"
            android:layout_alignParentRight="true"
            style="@style/CurrentValue"/>

        <TextView
            android:id="@+id/all_time_sets_title"
            android:text="@string/trainings"
            android:layout_toLeftOf="@id/all_time_sets"
            android:layout_below="@id/all_time_days"
            style="@style/MetricTitle"/>

        <!-- Overall pull-ups -->
        <TextView
            android:id="@+id/all_time_total"
            android:layout_below="@id/all_time_sets"
            android:layout_marginRight="@dimen/card_padding"
            android:layout_alignParentRight="true"
            style="@style/CurrentValue"/>

        <TextView
            android:id="@+id/all_time_total_title"
            android:text="@string/total"
            android:layout_toLeftOf="@id/all_time_total"
            android:layout_below="@id/all_time_sets"
            style="@style/MetricTitle"/>

        <!-- Record -->
        <TextView
            android:id="@+id/all_time_record"
            android:layout_below="@id/all_time_total"
            android:layout_marginRight="@dimen/card_padding"
            android:layout_alignParentRight="true"
            style="@style/CurrentValue"/>

        <TextView
            android:id="@+id/all_time_record_title"
            android:text="@string/record"
            android:layout_toLeftOf="@id/all_time_record"
            android:layout_below="@id/all_time_total"
            android:layout_marginBottom="@dimen/card_padding"
            style="@style/MetricTitle"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/clear_stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="italic"
            android:textColor="@color/card_primary_text"
            android:fontFamily="sans-serif-condensed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/clear_stat_dialog_title"/>

        <TextView
            android:id="@+id/clear_stats_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clear_stats_title"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic"
            android:textColor="@color/card_secondary_text"
            android:fontFamily="sans-serif-condensed"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/clear_stat_dialog_message"/>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clear_stats_message"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/clear_stats_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textColor="@drawable/dialog_button_text"
                android:textSize="@dimen/text_size_large"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:background="@null"
                android:text="@string/clear_stat_positive"/>

            <Button
                android:id="@+id/clear_stats_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textColor="@drawable/dialog_button_text"
                android:textSize="@dimen/text_size_large"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:background="@null"
                android:text="@string/clear_stat_negative"/>

        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/reset_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dots_button"
        android:background="@null"
        android:paddingLeft="48dp"
        android:layout_gravity="top|right" />

</merge>
